assets/scss/organisms/text/_table.scss
.table {
    margin-top: 130px;

    .table-desktop {
        @include breakpoint(small only) {
            display: none;
        }
    }

    .columns-content {
        margin-top: 70px;

        @include breakpoint(small only) {
            margin-top: 35px;
        }
    }

    .column-table {

        @include breakpoint(medium down) {
            margin-top: 40px;
        }

        .title {
            font-size: 1.6rem;
            font-weight: $bold;
            text-transform: uppercase;
        }

        .table-item {
            height: 70px;
            font-size: 2rem;
            margin-top: 50px;
            padding-bottom: 18px;
            border-bottom: 1px solid $black;

            @include breakpoint(medium down) {
                height: auto;
            }

            @include breakpoint(small only) {
                margin-top: 17px;
            }

            .link-item {
                padding-bottom: 12px;
            }
        }
    }

    .mobile-table {
        display: none;

        @include breakpoint(small only) {
            display: block;
        }

        .table-item {
            margin-top: 35px;
            border-bottom: 1px solid $porcelain;

            &:last-child {
                border: none;
            }
        }

        .name-item {
            margin-top: 17px;
        }

        .column-table {
            padding-bottom: 33px;
            border-bottom: 1px solid $black;
        }
    }
}

